<resources>
    <string name="app_name">We Care</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="favourite_text">Favourite</string>
    <string name="home_text">Home</string>
    <string name="Name">Name</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="admin_dashboard"><u>Admin Dashboard</u></string>
    <string name="detail">Includes several B vitamins
        such as B1 (Thiamine), B2 (Riboflavin) /n
        B3 (Niacin), B5 (Pantothenic Acid), B6 (Pyridoxine) /n
        B7 (Biotin), B9 (Folate), and B12 (Cobalamin)/n
       </string>

    <string name="about_text">WeCareApp is a comprehensive We care application that provides various features to improve your health and well-being. Our mission is to make We care accessible and convenient for everyone.</string>
    <string name="contact_info">Contact Us:\nEmail: info@weecareapp.com\nPhone: +1 (123) 456-7890</string>
    <string name="logo_description">App Logo</string>
    <string name="patient">Do you want to grow your practice?\n(more patient leads)</string>
    <string name="field_req">This field is required!</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="_09_00_pm">09:00 PM</string>
    <string name="_03096731072">03096731072</string>
    <string name="_12_01_200">12-01-200</string>
    <string name="lahore_dha_phase_8">Lahore | DHA Phase 8</string>
    <string name="dr_afzal_khan">DR Afzal Khan</string>
    <string name="instacare_online_clicic">Instacare Online Clicic</string>
    <string name="available_today">Available Today</string>
    <string name="hameed_latif_hospital">Hameed Latif Hospital</string>
    <string name="under_15_min">Under 15 Min</string>
    <string name="_2500_pkr">2500 PKR</string>
    <string name="wait_time">Wait time</string>
    <string name="experience">Experience |</string>
    <string name="fee">fee |</string>
    <string name="fcps_ortho_fellowship_in_spine_mbbs_orthopedic_surgen">FCPS (ortho),Fellowship in Spine,MBBS Orthopedic Surgen</string>
    <string name="dr_muhammad_khalid">Dr.Muhammad Khalid</string>
    <string name="pmc_verfied">PMC Verfied</string>

</resources>