<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shahdow"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dial"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:src="@drawable/delete"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/dr_afzal_khan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/lahore_dha_phase_8"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="10dp"
            android:gravity="end|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phonetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/_12_01_200"/>
            <TextView
                android:id="@+id/calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/_09_00_pm"/>


            <TextView
                android:visibility="gone"
                android:id="@+id/ContactNo"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="top"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/_03096731072"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>