<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_375sdp"
    android:layout_margin="12dp"

    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#7CB342"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B1DE80"
                android:padding="5dp"
                android:text="@string/pmc_verfied"
                android:textColor="#202C14" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:src="@drawable/doctor_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:text="@string/dr_muhammad_khalid"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speciality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:text="@string/fcps_ortho_fellowship_in_spine_mbbs_orthopedic_surgen"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:hint="@string/fee"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:hint="@string/experience"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:hint="@string/wait_time"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pkr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_55sdp"
                android:text="@string/_2500_pkr"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_38sdp"
                android:text="16 Yrs"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/under_15_min"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="4dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="#EEE6E6"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:gravity="start">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/hospital_image"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="start"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_1sdp"
                        android:src="@drawable/hp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hospital"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:text="@string/hameed_latif_hospital"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:text="@string/available_today"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="12dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cardBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/appColor"
                android:text="fix appointment"
                android:textColor="@color/white"
                app:cornerRadius="4dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>