<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".setting_Fragment">


    <!-- Toolbar/Header -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appColor"
        android:elevation="4dp"
        app:title="About Us"
        app:titleTextColor="@android:color/white" />

    <!-- Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <!-- App Logo/Image -->
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="145dp"
                android:layout_height="@dimen/_145sdp"
                android:layout_gravity="center"
                android:src="@drawable/app" />


            <!-- App Name -->
            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- About Text -->
            <TextView
                android:id="@+id/text_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/about_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- Contact Information -->
            <TextView
                android:id="@+id/text_contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/contact_info"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

